src/css/profile/mobile/common/popup.less
// *************************
// Normal Popup
// *************************
.ui-popup {
	display: none;
	position: absolute;
	left: 0;
	margin-bottom: 16 * @px_base;
	margin-top: 32 * @px_base;
	z-index: (@z_base_popup + 1) !important;
	background-color: @color_popup_bg;
	border-radius: 26 * @px_base;;

	@media (orientation: portrait) and (max-width: 479px) {
		width: 100%;
	}
	@media (orientation: landscape) and (max-height: 479px) {
		width: 55%;
	}
	@media (orientation: portrait) and (min-width: 673px) {
		width: 55%;
	}
	@media (orientation: landscape) and (min-width: 986px) {
		width: 35%;
	}

	.ui-popup-wrapper {
		width: 100%;
	}

	&.ui-popup-active {
		display: block;
	}

	&.in {
		display: block;
	}

	&.ui-build {
		display: block;
		visibility: hidden;
	}

	.ui-popup-header {
		width: 100%;
		text-align: left;
		background-color: @color_popup_header_bg;
		position: sticky;

		font-size: @font_size_popup_title_text;
		color: @color_popup_title_text;
		overflow: hidden;
		text-overflow: ellipsis;
		white-space: nowrap;
		.font(medium);

		&.ui-popup-header-has-subtitle {
			padding: 19.5 * @unit_base 32 * @unit_base;
			line-height: 57 * @unit_base;
			font-size: @font_size_popup_title_over_sub_text;
			color: @color_popup_title_sub_text;
		}
		& .ui-popup-subtitle {
			line-height: 38 * @unit_base;
		}

		@media (orientation: portrait) {
			padding: 26 * @px_base 24 * @px_base 19 * @px_base 24 * @px_base;
		}
		@media (orientation: landscape) {
			padding: 14 * @px_base 24 * @px_base 8 * @px_base 24 * @px_base;
		}
	}

	.ui-popup-content {
		width: 100%;
		background-color: @color_popup_bg;
		color: @color_popup_text;
		text-align: left;
		font-size: @font_size_popup_text;
		overflow: auto;
		.touch-scrolling();
		line-height: 23 * @px_base;

		img {
			display: block;
			margin: 0 auto;
			padding-bottom: 24 * @unit_base;
		}

		&.ui-date-picker-calendar {
			padding-left: 16 * @px_base;
			padding-right: 16 * @px_base;
		}

		.ui-listview.ui-content-area {
			margin-bottom: 0;

			& li .ui-li-text .ui-li-text-title {
				height: 24 * @px_base;
			}
			& li .ui-li-text .ui-li-text-sub {
				height: 18 * @px_base;
			}
		}

		.ui-popup-body-text {
			margin-top: 12 * @px_base;
		}

		.ui-popup-body-checkbox {
			margin-top: 8px;
		}

		ul .ui-li-has-checkbox {
			& .ui-li-text span {
				font-size: 16 * @px_base;
				line-height: 23 * @px_base;
			}
			& input {
				margin-left: 20 * @px_base;
				margin-right: 12 * @px_base;
			}
		}

		.ui-popup-container-text {
			width: 100%;
			height: 19 * @px_base;
			line-height: 19 * @px_base;
			color: var(--popup-text-color);
			font-size: 14 * @sp_base;
			.font(regular);
			
			.text-left {
				float: left;
			}
			.text-right {
				float: right;
			}
		}

		@media (orientation: portrait) {
			padding: 0 * @px_base 24 * @px_base 24 * @px_base 24 * @px_base;
		}
		@media (orientation: landscape) {
			padding: 0 * @px_base 24 * @px_base 11 * @px_base 24 * @px_base;
		}

		&.ui-popup-has-time-picker, &.ui-popup-has-date-picker {
			padding-left: unset;
			padding-right: unset;
		}
	}

	.ui-popup-footer {
		background-color: @color_popup_footer_bg;
		position: sticky;
		box-sizing: border-box;
		padding: 12 * @px_base 24 * @px_base;
		text-align: center;
		display: flex;
		align-items: center;
		flex-shrink: 0;
		flex-grow: 0;
		width: 100%;

		.ui-btn {
			height: 36 * @px_base;
			margin: 0 auto;
			max-width: 248 * @px_base;
			&.ui-btn-flat {
				font-size: 16 * @sp_base;
			}
		}

		div.ui-li-divider::after {
			content: "";
			position: absolute;
			width: @px_base;
			height: 22 * @px_base;
			top: 7 * @px_base;
			background-color: var(--on-off-switch-divider-color);
			opacity: var(--on-off-switch-divider-opacity);
		}

		.ui-popup-stack .ui-btn {
			margin-bottom: 16 * @px_base;

			&:nth-last-child(1) {
				margin-bottom: 0;
			}
		}
		
		.ui-li-action {
			width: 50%;
		}

		@media (orientation: portrait) {
			padding: 0 * @px_base 24 * @px_base 20 * @px_base 24 * @px_base;
		}
		@media (orientation: landscape) {
			padding: 0 * @px_base 24 * @px_base 4 * @px_base 24 * @px_base;
		}
	}

	.ui-listview {
		margin-left: -24 * @px_base;
	}

	.ui-popup-notitle {
		@media (orientation: portrait) {
			margin-top: 26 * @px_base;
		}
		@media (orientation: landscape) {
			margin-top: 14 * @px_base;
		}
	}

	.ui-popup-2level-description {
		height: auto;
		margin-top: 8 * @px_base;
		margin-left: 8 * @px_base;
		color: var(--popup-text-secondary-color);
	}

	.ui-popup-2level-description span {
		padding-right: 12 * @px_base;
	}

	
	.ui-listview {
		li.ui-li-flex.ui-li-multilines {
			.ui-li-area-a {
				margin-top: 14 * @px_base;
				margin-bottom: 14 * @px_base;
			}
		}
	}

	.ui-popup-header,
	.ui-popup-content,
	.ui-popup-footer {
		box-sizing: border-box;
	}
}

// ************************
// Popup with listview
// ************************
.ui-popup.ui-popup-listview {
	background-image: url("images/page/core_theme_bg_01.png");
	background-repeat: no-repeat;
	background-size: 100% 100%;
	overflow: hidden;
	background-color: transparent;

	.ui-popup-header {
		padding-top: 16 * @unit_base;
		padding-bottom: 16 * @unit_base;
	}
	.ui-popup-content {
		padding: 0;
		background-color: transparent;
		position: relative;
	}
	.ui-listview {
		position: relative;
		overflow: hidden;
		transform: translate3d(0, 0, 0);
		&::before {
			content: "";
			background-color: @color_popup_list_overlay_bg;
			width: 100%;
			height: 100%;
			display: block;
			position: absolute;
			top: 0;
			z-index: 1;
			pointer-events: none;
		}
	}
}

// ************************
// Popup MoreMenu
// ************************
.ui-popup.ui-popup-moremenu {
	max-height: 7 * 120 * @unit_base; // 7 list items
	overflow: hidden;
	@media (orientation: landscape) {
		max-height: 5 * 120 * @unit_base; // 5 list items
		width: 720 * @unit_base;
	}
}

// *************************
// Popup Overlay
// *************************
.ui-popup-overlay {
	display: none;
	background-color: var(--overlay);
	background-repeat: no-repeat;
	background-size: 100% 100%;

	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	z-index: @z_base_popup;

	&.ui-popup-overlay-shown {
		display: block;
	}
}

// *************************
// Activity Popup
// *************************
.ui-popup.ui-popup-activity .ui-popup-content {
	text-align: right;

	@media (orientation: landscape) {
		width: 100%;
	}
}

@-webkit-keyframes popup-activity {
	from {
		.transform(rotate(0deg));
	}
	to {
		.transform(rotate(360deg));
	}
}

@keyframes popup-activity {
	from {
		.transform(rotate(0deg));
	}
	to {
		.transform(rotate(360deg));
	}
}

.ui-popup.ui-popup-activity {
	@media (orientation: landscape) {
		width: 100%;
	}
}

.ui-popup.ui-popup-activity.ui-popup-activity-small .ui-popup-content {
	text-align: right;
	height: 78 * @unit_base;
	padding: 16 * @unit_base 32 * @unit_base;
	font-size: @font_size_popup_activity_small;
	color: @color_popup_activity_small_text;

	&::after {
		content: "";
		width: 44 * @unit_base;
		height: 44 * @unit_base;
		margin-left: 32 * @unit_base;
		background-color: @color_popup_activity_indicator_a;
		mask-image: url("images/core_activity_indicator_a.svg"),
		url("images/core_activity_indicator_b.svg"),
		url("images/core_activity_indicator_c.svg");
		mask-size: 100% 100%, 100% 100%, 100% 100%;
		float: right;
		animation-name: popup-activity;
		animation-duration: 1s;
		animation-timing-function: linear;
		animation-iteration-count: infinite;
	}
}

.ui-popup.ui-popup-activity.ui-popup-activity-medium .ui-popup-content {
	text-align: left;
	height: 120 * @unit_base;
	padding: 32 * @unit_base 32 * @unit_base;
	font-size: @font_size_popup_activity_medium;
	color: @color_popup_activity_medium_text;

	&::before {
		content: "";
		width: 56 * @unit_base;
		height: 56 * @unit_base;
		margin-right: 32 * @unit_base;
		background-color: @color_popup_activity_indicator_a;
		float: left;
		mask-image: url("images/core_activity_indicator_a.svg"),
		url("images/core_activity_indicator_b.svg"),
		url("images/core_activity_indicator_c.svg");
		mask-size: 100% 100%, 100% 100%, 100% 100%;
		animation-name: popup-activity;
		animation-duration: 1s;
		animation-timing-function: linear;
		animation-iteration-count: infinite;
	}
}

.ui-popup.ui-popup-activity.ui-popup-activity-large .ui-popup-content {
	text-align: center;
	height: 0;
	background-color: @color_popup_activity_indicator_a;
	mask-image: url("images/core_activity_indicator_c.svg");
	mask-size: 100% 100%;
}

